# glad-match

./: ALGORITHM.md  Cargo.toml  README.md  TOY.md  build_db_pack.py  prepare_reference.py
scripts/: plink_pca.sh  plot_gmm_overlay.py
src/: candidates.rs  cost.rs  error.rs  features.rs  filter.rs  integration_tests.rs  lib.rs  main.rs  ot.rs  pipeline.rs  refine.rs  stats.rs
src/io/: db_pack.rs  mod.rs  output_tsv.rs  query.rs  selected_tsv.rs  summary_json.rs
